youpost.org (archived on 2013-12-26)
{
  "alexa_rank": 146612,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 2400,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.16,
  "homepage_snapshot_redirected_domain": "youpost.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130805204143id_/http://www.youpost.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130805204143id_/http%3A//youpost.org",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "youpost.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131226065133id_/http%3A//www.youpost.org/index.php%3Fview%3Dpage%26pagename%3Dprivacy",
  "policy_title": "YouPost.org - Free Classified Ads",
  "policy_url": "youpost.org/index.php?view=page&pagename=privacy",
  "sha1": "ea53dfa3b8f91fb1c60786b321899c0afd990117",
  "simhash": 14677893275692667362,
  "simhash_updated": false,
  "site_hostname": "youpost.org",
  "site_url": "http://youpost.org",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131226065133",
  "word_count": 377,
  "year": 2013
}

--- a/y/yo/you/youpost.org.html
+++ b/y/yo/you/youpost.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the youpost.org privacy policy that was archived on 2013-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130626055713id_/http%3A//www.youpost.org/index.php%3Fview%3Dpage%26pagename%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the youpost.org privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226065133id_/http%3A//www.youpost.org/index.php%3Fview%3Dpage%26pagename%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
 <title> YouPost.org - Free Classified Ads</title>
@@ -47,7 +47,7 @@
   <!-- youpost.org -->
   </div>
   <div id="today">
-  Wednesday, 26 June, 2013  </div>
+  Thursday, 26 December, 2013  </div>
 <br>
 <br>
 <b><font color="#222222">C R E A T E  &nbsp; a n &nbsp; a l e r t</font></b><br><font size="1">Click <a href="http://www.youpost.org/index.php?view=page&amp;pagename=subscribe_vemail"><font color="green"><b>HERE</b></font></a> to register!</font>
@@ -258,25 +258,25 @@ Search engines and other sites which are not affiliated with YouPost - including
 			</td>
 			</tr>
 <tr><td colspan="3"><table width="100%" id="footer"><tbody><tr><td>
-Cities:                         <a href="15-South-Shields/" title="Free classified ads South Shields" class="citylist_city2">South Shields</a>
-                                <a href="4-Blyth/" title="Free classified ads Blyth" class="citylist_city2">Blyth</a>
-                                <a href="18-Wallsend/" title="Free classified ads Wallsend" class="citylist_city2">Wallsend</a>
-                                <a href="6-Darlington/" title="Free classified ads Darlington" class="citylist_city2">Darlington</a>
-                                <a href="17-Sunderland/" title="Free classified ads Sunderland" class="citylist_city2">Sunderland</a>
+Cities:                         <a href="10-Middlesbrough/" title="Free classified ads Middlesbrough" class="citylist_city2">Middlesbrough</a>
                                 <a href="8-Gateshead/" title="Free classified ads Gateshead" class="citylist_city2">Gateshead</a>
-                                <a href="5-Chester-le-Street/" title="Free classified ads Chester-le-Street" class="citylist_city2">Chester-le-Street</a>
-                                <a href="19-Washington/" title="Free classified ads Washington" class="citylist_city2">Washington</a>
-                                <a href="20-Whitley-Bay/" title="Free classified ads Whitley Bay" class="citylist_city2">Whitley Bay</a>
+                                <a href="15-South-Shields/" title="Free classified ads South Shields" class="citylist_city2">South Shields</a>
+                                <a href="7-Durham/" title="Free classified ads Durham" class="citylist_city2">Durham</a>
+                                <a href="17-Sunderland/" title="Free classified ads Sunderland" class="citylist_city2">Sunderland</a>
+                                <a href="13-North-Shields/" title="Free classified ads North Shields" class="citylist_city2">North Shields</a>
+                                <a href="18-Wallsend/" title="Free classified ads Wallsend" class="citylist_city2">Wallsend</a>
+                                <a href="12-Newcastle-upon-Tyne/" title="Free classified ads Newcastle-upon-Tyne" class="citylist_city2">Newcastle-upon-Tyne</a>
+                                <a href="16-Stockton-on-Tees/" title="Free classified ads Stockton-on-Tees" class="citylist_city2">Stockton-on-Tees</a>
         <br>
-Categories: <a href="-7/classified-ads/24-Jobs-Careers/513-Volunteer-charity/" title="Volunteer &amp; charity - Jobs &amp; Careers" alt="Volunteer &amp; charity" class="citylist_city2">Volunteer &amp; charity</a>&nbsp;
-<a href="-7/classified-ads/25-Classes/534-Other-Classes/" title="Other Classes - Classes" alt="Other Classes" class="citylist_city2">Other Classes</a>&nbsp;
-<a href="-7/classified-ads/20-Vehicles/402-Offroad-Vehicles/" title="Offroad Vehicles - Vehicles" alt="Offroad Vehicles" class="citylist_city2">Offroad Vehicles</a>&nbsp;
-<a href="-7/classified-ads/21-Property/419-Vacation-Rentals/" title="Vacation Rentals - Property" alt="Vacation Rentals" class="citylist_city2">Vacation Rentals</a>&nbsp;
-<a href="-7/classified-ads/21-Property/436-Garages-parking-space/" title="Garages &amp; parking space - Property" alt="Garages &amp; parking space" class="citylist_city2">Garages &amp; parking space</a>&nbsp;
-<a href="-7/classified-ads/25-Classes/524-Dance-Lessons/" title="Dance Lessons - Classes" alt="Dance Lessons" class="citylist_city2">Dance Lessons</a>&nbsp;
-<a href="-7/classified-ads/24-Jobs-Careers/502-Work-wanted/" title="Work wanted - Jobs &amp; Careers" alt="Work wanted" class="citylist_city2">Work wanted</a>&nbsp;
-<a href="-7/classified-ads/25-Classes/527-Computer-Courses/" title="Computer Courses - Classes" alt="Computer Courses" class="citylist_city2">Computer Courses</a>&nbsp;
-<a href="-7/classified-ads/22-Pets-and-Animals/446-Birds/" title="Birds - Pets and Animals" alt="Birds" class="citylist_city2">Birds</a>&nbsp;
+Categories: <a href="-7/classified-ads/21-Property/438-Free-stuff/" title="Free stuff - Property" alt="Free stuff" class="citylist_city2">Free stuff</a>&nbsp;
+<a href="-7/classified-ads/26-Services/547-Air-Conditioning/" title="Air Conditioning - Services" alt="Air Conditioning" class="citylist_city2">Air Conditioning</a>&nbsp;
+<a href="-7/classified-ads/28-Holidays-Travel/594-Travel-Tickets/" title="Travel Tickets - Holidays &amp; Travel" alt="Travel Tickets" class="citylist_city2">Travel Tickets</a>&nbsp;
+<a href="-7/classified-ads/30-Free-Stuff/631-Sports/" title="Sports - Free Stuff" alt="Sports" class="citylist_city2">Sports</a>&nbsp;
+<a href="-7/classified-ads/28-Holidays-Travel/585-Day-Trips-and-Coach-Tours/" title="Day Trips and Coach Tours - Holidays &amp; Travel" alt="Day Trips and Coach Tours" class="citylist_city2">Day Trips and Coach Tours</a>&nbsp;
+<a href="-7/classified-ads/30-Free-Stuff/620-Coins/" title="Coins - Free Stuff" alt="Coins" class="citylist_city2">Coins</a>&nbsp;
+<a href="-7/classified-ads/24-Jobs-Careers/508-Automotive/" title="Automotive - Jobs &amp; Careers" alt="Automotive" class="citylist_city2">Automotive</a>&nbsp;
+<a href="-7/classified-ads/27-Community/580-Car-Boot-Sale/" title="Car Boot Sale - Community" alt="Car Boot Sale" class="citylist_city2">Car Boot Sale</a>&nbsp;
+<a href="-7/classified-ads/21-Property/416-Parking-Storage/" title="Parking &amp; Storage - Property" alt="Parking &amp; Storage" class="citylist_city2">Parking &amp; Storage</a>&nbsp;
 <br>
 <br>
 <a href="http://www.youpost.org/partners.php" title="partners"><font color="#A0A0A0">Partners</font></a>
@@ -297,6 +297,6 @@ pageTracker._trackPageview();
 } catch(err) {}</script>
 </td></tr>
 </tbody></table>
-<!-- 0.043110 -->
+<!-- 0.156604 -->
 
 </body></html>
