--- a/b/be/bes/bestforpuzzles.com.html
+++ b/b/be/bes/bestforpuzzles.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bestforpuzzles.com privacy policy that was archived on 2013-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130627002444id_/http%3A//bestforpuzzles.com/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bestforpuzzles.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226073045id_/http%3A//www.bestforpuzzles.com/about/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Statement</title>
