localvigyapan.com (archived on 2013-12-26)
{
  "alexa_rank": 880821,
  "analysis_subcorpus": true,
  "categories": "",
  "char_count": 4997,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 14.23,
  "homepage_snapshot_redirected_domain": "localvigyapan.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131008104750id_/http://www.localvigyapan.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131008104750id_/http%3A//localvigyapan.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "localvigyapan.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131226081737id_/http%3A//www.localvigyapan.com/static/privacy_policy",
  "policy_title": "Local Vigyapan Privacy Policy",
  "policy_url": "localvigyapan.com/static/privacy_policy",
  "sha1": "e146e0d2a0270fdc64a4f7fee570952c03f358ab",
  "simhash": 12515101023448045224,
  "simhash_updated": false,
  "site_hostname": "localvigyapan.com",
  "site_url": "http://localvigyapan.com",
  "smog": 15.82,
  "strict_updated": false,
  "timestamp": "20131226081737",
  "word_count": 767,
  "year": 2013
}

--- a/l/lo/loc/localvigyapan.com.html
+++ b/l/lo/loc/localvigyapan.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the localvigyapan.com privacy policy that was archived on 2013-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130627011220id_/http%3A//www.localvigyapan.com/static/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the localvigyapan.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226081737id_/http%3A//www.localvigyapan.com/static/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Local Vigyapan Privacy Policy</title>
@@ -286,6 +286,7 @@ We may also share personal information with:<br>
    <div class="FL"><a href="/pune/95" class="gL_12">Pune Classifieds </a> &nbsp;|&nbsp; </div>
    <div class="FL"><a href="/surat/42" class="gL_12">Surat Classifieds </a> &nbsp;|&nbsp; </div>
    <div class="FL"><a href="http://www.localvigyapan.com/" class="gL_12">Free Online Classifieds </a> &nbsp;|&nbsp; </div>
+   <div class="FL">For Advertisement contact Mr. Amit Tripathi; Mob: +91-9820333720 &nbsp;|&nbsp; </div>
 	</div>
 	<div class="CL"></div>
 	</div>
@@ -294,7 +295,7 @@ We may also share personal information with:<br>
   
   <div class="mcont"><div style="padding: 8px 10px;">
   
-  <div class="FL gL_11">© 2009-2010 Localvigyapan.com India</div>
+  <div class="FL gL_11">© 2009-2013 Localvigyapan.com India</div>
   <div class="FR gL_12">
     <div class="FL"><a href="/static/aboutus" class="gL_12">About Us </a> &nbsp;|&nbsp; </div>
     <div class="FL"><a href="/static/contactus" class="gL_12">Contact Us</a> &nbsp;|&nbsp; </div>
