nextjump.com (archived on 2013-12-26)
{
  "alexa_rank": 20806,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 12361,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.63,
  "homepage_snapshot_redirected_domain": "nextjump.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130928215855id_/http://www.nextjump.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130928215855id_/http%3A//nextjump.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "nextjump.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131226091027id_/http%3A//www.nextjump.com/index/privacy",
  "policy_title": "Privacy Policy -- Next Jump",
  "policy_url": "nextjump.com/index/privacy",
  "sha1": "a181559ebd75afea90c1adc4579df17d0e72fc4f",
  "simhash": 3597400561256609935,
  "simhash_updated": false,
  "site_hostname": "nextjump.com",
  "site_url": "http://nextjump.com",
  "smog": 15.2,
  "strict_updated": false,
  "timestamp": "20131226091027",
  "word_count": 2000,
  "year": 2013
}

--- a/n/ne/nex/nextjump.com.html
+++ b/n/ne/nex/nextjump.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nextjump.com privacy policy that was archived on 2013-04-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130423235614id_/http%3A//www.nextjump.com/index/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nextjump.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226091027id_/http%3A//www.nextjump.com/index/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <meta name="description" content="Next Jump is the premier provider of internet-based next generation Rewards and Loyalty programs to corporations, affinity groups and institutions worldwide">
@@ -36,36 +36,170 @@
                 <div id="logo">
                     <a href="/"><img alt="Next Jump Logo" src="http://imga.nxjimg.com/emp_image/nextjump/images/nextjump_logo_black.jpg"></a>
                 </div>
-                <div id="nav" class="last">
-                    <a href="/about/index" id="aboutLink" class="navSprite">
-                        <span>Who We Are</span>
-                        <div class="navLink"></div>
-                    </a>
-                    <a href="/business/index" id="businessLink" class="navSprite">
-                        <span>Our Business</span>
-                        <div class="navLink">
-                        </div>
-                    </a>
-                    <a href="/about/careers" id="careersLink" class="navSprite">
-                        <span>Careers</span>
-                        <div class="navLink"></div>
-                    </a>
-                    <a href="/buzz/index" id="buzzLink" class="navSprite">
-                        <span>Buzz</span>
-                        <div class="navLink"></div>
-                    </a>
-                    <a href="http://blog.nextjump.com" target="_blank" id="blogLink" class="navSprite">
-                        <span>Blog</span>
-                        <div class="navLink"></div>
-                        <div class="newIcon"></div>
-                    </a>
-                    <a href="/contact/index" id="contactLink" class="navSprite">
-                        <span>Contact Us</span>
-                        <div class="navLink"></div>
-                    </a>
-                    <a href="http://www.oo.com" target="_blank" class="ooTag">
-                    </a>
+                <div id="subLogo">
+                    <a href="http://www.oo.com" target="_blank" class="ooTag"></a>
                 </div>
+                <ul id="topNav" class="topNavDark">
+                    <li class="menuParent">
+                        <a href="/about/index" class="menuLink ">
+                            Who We Are
+                        </a>
+                        <ul class="subMenu">
+                            <li class="subMenuItem">
+                                <a href="/about/development">
+                                    Better Me
+                                </a>
+                                <ul class="superSubMenu">
+                                    <li>
+                                        <a href="/about/development">
+                                            Initiatives
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/about/health">
+                                            Health &amp; Wellness
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="subMenuItem">
+                                <a href="/about/nextjumpcares">
+                                    Better You
+                                </a>
+                                <ul class="superSubMenu">
+                                    <li>
+                                        <a href="/about/nextjumpcares">
+                                            NxJ Cares
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/about/oocom">
+                                            OO.com
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/cfac/index">
+                                            CFAC
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/about/awards">
+                                            Awards &amp; Recognition
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="subMenuItem">
+                                <a href="/about/origins">
+                                    Origin Story
+                                </a>
+                            </li>
+                            <li class="subMenuItem">
+                                <a href="/about/fun">
+                                    Having Fun
+                                </a>
+                            </li>
+                            <li class="subMenuItem">
+                                <a href="/about/management">
+                                    Leadership
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="menuParent">
+                        <a href="/business/index" class="menuLink ">
+                            Our Business
+                        </a>
+                    </li>
+                    <li class="menuParent">
+                        <a href="/about/careers" class="menuLink ">
+                            Careers
+                        </a>
+                        <ul class="subMenu">
+                            <li class="subMenuItem">
+                                <a href="/about/careers">
+                                    Available Positions
+                                </a>
+                            </li>
+                            <li class="subMenuItem">
+                                <a href="/about/submityourresume">
+                                    Apply Now
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="menuParent">
+                        <a href="/buzz/index" class="menuLink ">
+                            Buzz
+                        </a>
+                        <ul class="subMenu">
+                            <li class="subMenuItem">
+                                <a href="/buzz/media">
+                                    Media
+                                </a>
+                            </li>
+                            <li class="subMenuItem">
+                                <a href="/buzz/pr">
+                                    Press Releases
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="menuParent">
+                        <a href="/blog/index" class="menuLink ">
+                            Blogs
+                        </a>
+                        <ul class="subMenu">
+                            <li class="subMenuItem">
+                                <a href="/blog/index">
+                                    Culture
+                                </a>
+                            </li>
+                            <li class="subMenuItem">
+                                <a href="/blog/engineering">
+                                    Engineering
+                                </a>
+                            </li>
+                            <li class="subMenuItem">
+                                <a href="/blog/devpoets">
+                                    Dev Poets Society
+                                </a>
+                            </li>
+                            <li class="subMenuItem">
+                                <a target="_blank" href="https://www.youtube.com/officialnextjump">
+                                    YouTube Channel
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="menuParent">
+                        <a href="/contact/index" class="menuLink ">
+                            Contact Us
+                        </a>
+                        <ul class="subMenu">
+                            <li class="subMenuItem">
+                                <a href="/contact/index">
+                                    All Inquiries
+                                </a>
+                            </li>
+                            <li class="subMenuItem">
+                                <a href="/about/submityourresume">
+                                    Careers
+                                </a>
+                            </li>
+                            <li class="subMenuItem">
+                                <a href="/merchants/contact">
+                                    Merchant
+                                </a>
+                            </li>
+                            <li class="subMenuItem">
+                                <a href="/employer/contact">
+                                    Employer
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
 
             <div class="spacer span-24 last">
@@ -355,7 +489,7 @@
             <div class="span-4 footerSection notLast">
                 <h3>BUSINESS</h3>
                 <a href="/shoppers/index">Customers</a>
-                <a href="/merchants/index">Merchants</a>
+                <a href="/business/index">Merchants</a>
                 <a href="/employer/index">Employers</a>
                 <br>
                 <h3>PRODUCTS</h3>
