--- a/4/41/411/411.info.html
+++ b/4/41/411/411.info.html
@@ -1,12 +1,11 @@
-<!--The following is the downloaded HTML source of the 411.info privacy policy that was archived on 2013-05-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130531023811id_/http%3A//411.info/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 411.info privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226091626id_/http%3A//411.info/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 	<meta charset="utf-8">
 	<title>411.info - US Local Search - Privacy Policy</title>
-	<meta name="keywords" content="411, 411.info, yellowpages, whitepages, USA, United States, America, local, search, reverse, lookup">
-	<meta name="description" content="Search our free 411 directory to find people, telephone numbers, businesses. It's fast and easy on 411.info">
-	<meta http-equiv="Content-Script-Type" content="text/javascript">
+		<meta name="description" content="Search our free 411 directory to find people, telephone numbers, businesses. It's fast and easy on 411.info">
+		<meta http-equiv="Content-Script-Type" content="text/javascript">
 	<meta http-equiv="Content-Language" content="en-US">
 	<meta http-equiv="Pragma" content="no-cache">
 	<meta http-equiv="Cache-Control" content="no-cache">
@@ -23,15 +22,15 @@
 	<link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72-precomposed.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114-precomposed.png">
 	<link rel="apple-touch-icon" sizes="144x144" href="/images/apple-touch-icon-144-precomposed.png">
-		<link rel="alternate" media="only screen and (max-width: 640px)" href="http://m.411.info/privacy/">
+				<link rel="alternate" media="only screen and (max-width: 640px)" href="http://m.411.info/privacy">
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-responsive.min.css" rel="stylesheet">
-	<link href="/css/style.css?v=130522.0" rel="stylesheet">
+	<link href="/css/style.css?v=131218.1" rel="stylesheet">
 	<link title="411.info Local Search" rel="search" type="application/opensearchdescription+xml" href="http://411.info/provider.xml">
 	<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/js/jquery-1.8.1.min.js"></script>
 	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="/js/main.js?v=130522.0"></script>
+	<script type="text/javascript" src="/js/main.js?v=131218.1"></script>
     </head>
 <body itemscope="" itemtype="http://schema.org/WebPage">
 
@@ -50,8 +49,8 @@
 			<li><a href="#tab1" id="tab_fb" data-toggle="tab">Find a Business</a></li>
 			<li class="pull-right dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Login<b class="caret"></b></a>
 				<ul class="dropdown-menu login_dropdown">
-					<a href="https://www.facebook.com/dialog/oauth?client_id=395701530457841&amp;redirect_uri=http%3A%2F%2F411.info%2Fprivacy%2F&amp;state=89b284b48267fb6481548fd9ec4be44b&amp;scope=publish_stream" rel="nofollow"><div class="login_facebook"></div></a>
-					<a href="/tw_redirect.php?callback=http%3A%2F%2F411.info%2Fprivacy%2F" rel="nofollow"><div class="login_twitter"></div></a>
+					<a href="https://www.facebook.com/dialog/oauth?client_id=395701530457841&amp;redirect_uri=http%3A%2F%2F411.info%2Fprivacy&amp;state=dcee2782b3697fe2cecb3e236078ed6e&amp;scope=publish_stream" rel="nofollow"><div class="login_facebook"></div></a>
+					<a href="/tw_redirect.php?callback=http%3A%2F%2F411.info%2Fprivacy" rel="nofollow"><div class="login_twitter"></div></a>
 				</ul>
 			</li>
 		</ul>
@@ -150,9 +149,6 @@
 
 <h3>Managing your Information</h3>
 
-<h4>Editing your profile:</h4>
-<div>We provide a process in which the user can manage the use of their personal information on the Site. You may change or remove your profile information at any time by going to your profile page and clicking on your “Privacy” page.</div>
-
 <h4>Refusal or Withdrawal of Consent:</h4>
 <div>If you provide us with your email address and do not opt-out in your visitor profile, you may occasionally receive emails from us and our affiliates as described in this Privacy Policy or the Terms of Use. We may use your email address submitted through the Sites for the following purposes: (i) when you are registering for a program, we may confirm your email address is accurate; (ii) we will send a thank you email when you sign up, or register for an event or if you subscribe to our newsletter or weekly column (iii) otherwise to fulfill the purposes described in this Privacy Policy. We hope you will find these emails interesting and informative.
 You may refuse to provide personal information to us and may, subject to legal or contractual restrictions and reasonable notice, withdraw consent at any time to our continued use and disclosure of personal information previously collected. Please note that refusing or withdrawing your consent in respect of our handling of certain personal information may result in us being unable to provide you with certain services. You can withdraw your consent at any time by writing to the Privacy Officer at the address at the end of this Policy.</div>
@@ -186,10 +182,10 @@ We will retain your personal information only for the time it is required for th
 	<span><a href="/" title="411 America Local Search">Home</a> <span class="divider">|</span></span>
 	<span><a href="http://m.411.info/" title="Mobile 411 America Local Search">Mobile</a> <span class="divider">|</span></span>
 	<span><a href="/about/" title="About 411 America Local Search" rel="nofollow">About 411.info</a> <span class="divider">|</span></span>
-	<span><a href="/contact/" title="Contact 411.info">Contact</a> <span class="divider">|</span></span>
+	<span><a href="/contact/" title="Contact 411.info" rel="nofollow">Contact</a> <span class="divider">|</span></span>
 	<span><a href="/terms/" title="411.info Terms &amp; Conditions" rel="nofollow">Terms &amp; Conditions</a> <span class="divider">|</span></span>
 	<span><a href="/privacy/" title="411.info Privacy Policy" rel="nofollow">Privacy Policy</a> <span class="divider">|</span></span>
-	<span><a href="/faq/" title="411.info FAQ">FAQ</a> <span class="divider">|</span></span>
+	<span><a href="/faq/" title="411.info FAQ" rel="nofollow">FAQ</a> <span class="divider">|</span></span>
 	<span><a href="/directory/" title="411.info Business Directory">Business Directory</a> <span class="divider">|</span></span>
 	<span><a href="/people-directory/" title="411.info People Directory">People Directory</a></span>
 </div>
@@ -197,7 +193,6 @@ We will retain your personal information only for the time it is required for th
 <div class="copy">
 	© Wideport.com Inc. 2013. All rights reserved.
 </div>
-
 
 
 <script type="text/javascript">
@@ -223,7 +218,6 @@ if(document.location.protocol=='http:'){
 }
 </script>
 <!-- END Tynt Script -->
-
 
 <script>
 
