--- a/s/sa/sa-/sa-venues.com.html
+++ b/s/sa/sa-/sa-venues.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sa-venues.com privacy policy that was archived on 2013-05-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130518065101id_/http%3A//www.sa-venues.com/include/privacy-policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sa-venues.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226124731id_/http%3A//www.sa-venues.com/include/privacy-policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>SA-Venues.com Privacy Policy</title>
@@ -8,6 +8,7 @@
 <meta name="robots" content="index,follow">
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <link rel="shortcut icon" href="../favicon.ico">
+<link rel="canonical" href="http://www.sa-venues.com/include/privacy-policy.htm">
 <script type="text/javascript" src="scripts.js"></script>
 <script type="text/javascript" src="scripts/jquery.js"></script>
 <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
@@ -40,7 +41,7 @@
 
 
 <!-- start LINK PATH -->
-<div class="here">You are here: <a href="http://www.sa-venues.com/">South Africa</a><span> / SA-Venues.com Privacy Policy</span></div>
+<div class="here">You are here: <a href="http://www.sa-venues.com/">Home</a><span> / SA-Venues.com Privacy Policy</span></div>
 <!-- end LINK PATH -->
 
 
@@ -118,11 +119,38 @@
 </div>
 <div id="detail" class="swap">
 	<div class="description">
-	<p>SA-Venues.com respects and is committed to protecting your privacy. That is why we have adopted this Privacy Policy. This Privacy Policy lets you know how your information is used.
+	<p><strong>Introduction</strong>
+	Protecting users’ privacy is of utmost importance to us. Accordingly, we have developed this Privacy Policy in order to safeguard the user’s personal information, and to protect user’s confidential personal information. This privacy policy applies to all the web pages related to this website. Unless the context clearly indicates to the contrary, any term in this Privacy Policy will bear the same meaning as defined in any of our Terms and Conditions, Terms of Registration, or Conditions of Use, as applicable and appearing on this site.
 	<br><br>
-	SA-Venues.com does not collect any information from users of it's network of websites. All communications are conducted directly between the user and the accommodation establishments featured on the SA-Venues.com websites. The information you provide when completing enquiry or booking forms will not be used for any other purposes other than to respond to your enquiries. 
+	<strong>Personal Information</strong>
+	For purpose of this Privacy Policy, "personal information” means the user’s name, identity or passport number, physical address, postal address, e-mail address, telephone number/s, credit card details, or banking details. The site may also collect certain information about a user’s visit, such as: the name of the Internet service provider and the Internet Protocol (IP) address through which the user accesses the Internet; the date and time the user accesses the site; the pages that the user accesses while on the site; and the Internet address of the Web site from which the user linked directly to the site. This information is used to help improve the site, analyse trends, and administer the site.
 	<br><br>
-	Establishments sign an agreement to respect the users privacy at the time of signing up to advertise with SA-Venues.com and as such are committed to respecting your privacy. You will not receive any unsolicited e-mail from either SA-Venues.com nor any of its advertisers or associates. Our advertisers respect your privacy and undertake not to sell, rent or lease your personal information to others. (Please report any transgressions to info@sa-venues.com).</p>
+	By registering on this site, accepting any of the Supplier’s Terms and Conditions, or submitting any personal information on the website, the user consents to our collection of personal information for the continued duration of the user’s relationship with us, subject to the limitations set out in this Privacy Policy.
+	<br><br>
+	We may collect personal information when a user registers on the site, submits an application form, requests a quote, submits a message via the “Contact Us” facility,  responds to a survey, or in any other manner or form submits personal information on the site. We may also collect personal information for purpose of improving our service offering and for the purpose of increasing service efficiency. 
+	<br><br>
+	All personal information will only be retained by us for as long as it is necessary to fulfill the purposes mentioned herein.
+	<br><br>
+	We will use our best endeavours to keep the personal information we collect as accurate, complete and up to date as is necessary for the purposes mentioned herein. We may, from time to time, request the user to update his personal information on the website. Users are able to review or update any personally identifiable information that we hold on them by emailing us. In order to better protect the user and safeguard user’s personal information, we may take steps to verify user’s identity before granting user access to the information or making any corrections to the information.
+	<br><br>
+	We may use encryption, firewalls and other security technology and procedures to help protect the confidentiality of user’s personal information and prevent unauthorised access or improper use thereof. All personal information is securely stored in our database.
+	<br><br>
+	<strong>Disclosure of Personal Information</strong>
+	Subject to a user’s right to withdraw consent in certain instances, the user agrees that we may obtain personal information and use it, and to disclose it to other persons for certain specified purposes, including for credit information sharing, debtor tracing, marketing and contract administration. We will also provide personal information to law enforcement and other competent authorities in response to lawful requests and where we believe that the disclosure of the information is necessary to institute legal proceedings against third parties.
+	<br><br>
+	<strong>Credit Card Acquiring and Security</strong>
+	Where credit card transactions are processed, we have implemented prudent security policies and procedures. No credit card details are stored on our website. All encryption complies with international standards. Encryption is used to protect the transmission of personal information when completing online transactions.
+	<br><br>
+	<strong>Cookies</strong>
+	We may from time to time make use of cookie technology, which comprises a small text file that is stored on the user’s computer's hard drive containing information about the user, so that the next time the user visits the website, the cookie is able to identify who the user is. This enables us to achieve our goal of providing a valuable online experience to our users. Users are, however, able to disable this cookie technology in the Internet browser.
+	<br><br>
+	<strong>Liability </strong>
+	While we will do all things reasonably necessary to protect the user’s rights of privacy whilst on the website, we cannot be held liable for any unauthorised or unlawful disclosure of the user’s personal and confidential information.
+	<br><br>
+	<strong>Changes to the Privacy Policy</strong>
+	We may need to change this policy from time to time in order to address new issues and reflect changes on our site. We will post those changes here so that you will always know what information we gather, how we might use that information, and whether we will disclose that information to anyone. Please refer back to this policy regularly.
+	<br><br>
+	By using this website, you signify your acceptance of this Privacy Policy. If you do not agree, please exit the site. Your continued use of the website following the posting of changes to this policy will mean that you accept those changes.</p>
 	</div>
 </div>
 <!-- end INTRO -->
@@ -280,9 +308,7 @@
 						<div id="container-shadow" class="additional">
 
 
-<!-- start SHADOW -->
-<a href="http://www.sa-venues.com/">South Africa Travel</a> | <a href="http://www.sa-venues.com/accommodation_south_africa.htm">South Africa Accommodation</a> | <a href="http://www.sa-venues.com/hotels_south_africa.htm">South Africa Hotels</a> | <a href="http://www.sa-venues.com/weddings/default.htm">South Africa Weddings</a> | <a href="http://www.suedafrika-reise.net/">Südafrika Reise</a> | <a href="http://www.suedafrika-reise.net/uebernachtung.htm">Südafrika Unterkunft</a>
-<!-- start SHADOW -->
+<!-- start SHADOW -->This Privacy Policy lets you know how your information is used when submitted<!-- start SHADOW -->
 
 
 						</div>
@@ -293,7 +319,7 @@
 	</div>
 
 	<div id="toolbar" class="cg">
-		<div id="toolbar-inner">
+		<div id="toolbar-inner-edit">
 			<div id="container-toolbar">
 
 
@@ -308,9 +334,7 @@
 
 <div id="bookmark" class="f-right"><img src="images/icon-bookmark.gif" border="0" width="22" height="14"><a href="#" onmousedown="addBookmark('SA-Venues.com Disclaimer','http://www.sa-venues.com/no/disclaimer.htm')">Bookmark</a></div>
 
-<div id="recommend" class="f-right"><img src="images/icon-recommend.gif" border="0" width="20" height="14"><a rel="gb_page[432, 298]" title="Recommend SA-Venues.com Disclaimer" href="http://www.sa-venues.com/include/refer/recommend-friend.php?page=/no/disclaimer.htm">Send to a friend</a></div>
-
-<div id="broadcast" class="f-right"><img src="images/icon-mychoices.gif" border="0" width="21" height="14"><a href="http://www.sa-venues.com/my-choices/" rel="gb_page[500, 350]" title="My-Choices">My-Choices</a></div>
+<div id="subscribe" class="f-right"><img src="images/icon-subscribe.gif" border="0" width="20" height="15"><a href="http://eepurl.com/tUPyf" rel="gb_page[620, 500]" title="Subscribe">Subscribe</a></div>
 
 <div id="deutsch" class="f-right"><img src="images/icon-deutsch.gif" border="0" width="17" height="14"><a href="http://www.suedafrika-reise.net/" title="Südafrika Urlaub">Deutsch</a></div>
 <!-- end TOOLBAR -->
@@ -330,5 +354,6 @@
 _uacct = "UA-780180-3";
 urchinTracker();
 </script>
+
 
 </body></html>
