--- a/l/li/lin/linear.com.html
+++ b/l/li/lin/linear.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the linear.com privacy policy that was archived on 2013-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130603095333id_/http%3A//www.linear.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the linear.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226125446id_/http%3A//www.linear.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><!--<![endif]--><!-- template-body --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -7,11 +7,9 @@
 <meta name="description" content="">
 <meta name="keywords" content="">
 <meta name="pageid" content="67">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
-   <script type="text/javascript" src="/_ui/js/pingdom.js"></script> 
-   <link rel="stylesheet" type="text/css" media="all" href="http://cds.linear.com/_ui/linear.com/css/main.css?ref=1"> 
-   <link rel="stylesheet" type="text/css" media="all" href="http://cds.linear.com/_ui/linear.com/css/jquery-theme/ui-lightness/jquery-ui-1.8.14.custom.css">
-
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">  
+   <link rel="stylesheet" type="text/css" media="all" href="http://cds.linear.com/_ui/linear.com/css/main.css?ref=4">
+<link rel="stylesheet" type="text/css" media="all" href="http://cds.linear.com/_ui/linear.com/css/jquery-theme/smoothness/jquery-ui.custom.css?ref=4">
    <!--[if lte IE 9]><link rel="stylesheet" type="text/css" media="all" href="http://cds.linear.com/_ui/linear.com/css/ie.css" /><![endif]-->
    <link rel="stylesheet" type="text/css" media="print" href="http://cds.linear.com/_ui/linear.com/css/print.css"> 
 
@@ -25,7 +23,7 @@
    <!--[if IE 8]>
    <script type="text/javascript" src="http://cds.linear.com/_ui/linear.com/js/PIE.js"></script>
    <![endif]--> 
-<script type="text/javascript" src="http://cds.linear.com/_ui/linear.com/js/main.js?ref=3"></script>
+<script type="text/javascript" src="http://cds.linear.com/_ui/linear.com/js/main.js?ref=4"></script>
 </head>
 <body class="sub">
 <div id="container" class="threecol">
@@ -52,7 +50,7 @@
  
     <ul id="navigation"> 
   <li class="mainnav1"><a href="http://www.linear.com/products/"><span>PRODUCTS</span></a></li> 
-      <li class="mainnav2"><a href="http://circuits.linear.com/"><span>SOLUTIONS</span></a></li> 
+<li class="mainnav2"><a href="http://www.linear.com/solutions/"><span>SOLUTIONS</span></a></li> 
   <li class="mainnav3"><a href="http://www.linear.com/designtools/"><span>DESIGN SUPPORT</span></a></li> 
   <li class="mainnav4"><a href="http://www.linear.com/purchase/"><span>PURCHASE</span></a></li> 
   <li class="mainnav5"><a href="http://www.linear.com/company/"><span>COMPANY</span></a></li> 
@@ -90,6 +88,7 @@
   <li><a href="http://www.linear.com/privacy.php" onclick="javascript:urchinTracker ('/Home/PrivacyPolicy');">Privacy Policy</a></li>
   <li><a class="mobile_link" href="http://m.linear.com">View Mobile Site</a></li> 
   </ul>
+
   </div>
   <!-- /global-footer -->
 </div>
@@ -143,6 +142,20 @@ function urchinTracker(ga_page){
 	pageTracker._trackPageview(ga_page);
 }
 </script>
+<script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 1071476428;
+var google_custom_params = window.google_tag_params;
+var google_remarketing_only = true;
+/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1071476428/?value=0&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>
 
 <!-- /template-body -->
 </body></html>
